--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ canvas{
 <div id="particles">
   <div id="webcoderskull">
     <h1>PARTICLE BACKGROUND</h1>
-    <p>Web Coder Skull Team</p>
+    <p>Portfolio</p>
     
   </div>
 </div>
